syntax = "proto3";

package svc.query.v1;

import "types/v1/otel_tracing.proto";

option go_package = "svc/query/v1;queryv1";

service TraceService {
  rpc GetTrace(GetTraceRequest) returns (GetTraceResponse);
  rpc GetSpan(GetSpanRequest) returns (GetSpanResponse);
}

message GetTraceRequest {
  int64 environment_id = 1;
  oneof by {
    string trace_id = 201;
    string span_id = 202;
  }
}

message GetTraceResponse {
  types.v1.Trace trace = 1;
}

message GetSpanRequest {
  int64 environment_id = 1;
  string span_id = 2;
}

message GetSpanResponse {
  types.v1.Span span = 1;
}
